[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.9.6"
thiserror = "1.0.30"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.9.6"
solana-sdk = "=1.9.6"
solana-validator = "=1.9.6"
solana-logger = "=1.9.6"

[lib]
crate-type = ["cdylib", "lib"]
